--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
+    "vuex": "^3.1.0",
     "web3": "^1.3.1"
   },
   "devDependencies": {
